--- a/test/Dwapi.Exchange.SharedKernel.Infrastructure.Tests/Dwapi.Exchange.SharedKernel.Infrastructure.Tests.csproj
+++ b/test/Dwapi.Exchange.SharedKernel.Infrastructure.Tests/Dwapi.Exchange.SharedKernel.Infrastructure.Tests.csproj
@@ -9,7 +9,9 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.8" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.8" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.8" />
