initial registry API

--- a/test/Dwapi.Exchange.Infrastructure.Tests/Dwapi.Exchange.Infrastructure.Tests.csproj
+++ b/test/Dwapi.Exchange.Infrastructure.Tests/Dwapi.Exchange.Infrastructure.Tests.csproj
@@ -23,5 +23,23 @@
     <PackageReference Include="Z.Dapper.Plus" Version="3.0.18" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestArtifacts\Database\demo.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestArtifacts\Database\source.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Dwapi.Exchange.Core\Dwapi.Exchange.Core.csproj" />
+    <ProjectReference Include="..\..\src\Dwapi.Exchange.Infrastructure\Dwapi.Exchange.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\src\Dwapi.Exchange.SharedKernel\Dwapi.Exchange.SharedKernel.csproj" />
+  </ItemGroup>
+
 
 </Project>
