--- a/src/Dwapi.Exchange.Infrastructure/Dwapi.Exchange.Infrastructure.csproj
+++ b/src/Dwapi.Exchange.Infrastructure/Dwapi.Exchange.Infrastructure.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.8" />
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="Z.Dapper.Plus" Version="3.0.18" />
   </ItemGroup>
@@ -17,6 +18,13 @@
   <ItemGroup>
     <ProjectReference Include="..\Dwapi.Exchange.Core\Dwapi.Exchange.Core.csproj" />
     <ProjectReference Include="..\Dwapi.Exchange.SharedKernel.Infrastructure\Dwapi.Exchange.SharedKernel.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Seed\Registry.csv" />
+    <EmbeddedResource Include="Seed\Registry.csv" />
+    <None Remove="Seed\ExtractRequest.csv" />
+    <EmbeddedResource Include="Seed\ExtractRequest.csv" />
   </ItemGroup>
 
 </Project>
