--- a/src/Dwapi.Exchange.SharedKernel/Dwapi.Exchange.SharedKernel.csproj
+++ b/src/Dwapi.Exchange.SharedKernel/Dwapi.Exchange.SharedKernel.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="15.0.5" />
     <PackageReference Include="Serilog" Version="2.10.0" />
   </ItemGroup>
 
