initial extacts API

--- a/test/Dwapi.Exchange.Core.Tests/Dwapi.Exchange.Core.Tests.csproj
+++ b/test/Dwapi.Exchange.Core.Tests/Dwapi.Exchange.Core.Tests.csproj
@@ -35,10 +35,10 @@
     <None Update="TestArtifacts\Database\demo.db">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="TestArtifacts\Database\source.db">
+    <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="appsettings.json">
+    <None Update="TestArtifacts\Database\source.db">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
@@ -47,6 +47,11 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Dwapi.Exchange.Infrastructure\Dwapi.Exchange.Infrastructure.csproj" />
     <ProjectReference Include="..\..\src\Dwapi.Exchange.SharedKernel\Dwapi.Exchange.SharedKernel.csproj" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <Folder Include="Application\Definitions" />
   </ItemGroup> 
 
 </Project>
