--- a/src/Dwapi.Exchange/Dwapi.Exchange.csproj
+++ b/src/Dwapi.Exchange/Dwapi.Exchange.csproj
@@ -41,4 +41,8 @@
       <ProjectReference Include="..\Dwapi.Exchange.Infrastructure\Dwapi.Exchange.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="logs" />
+    </ItemGroup>
+
 </Project>
