--- a/src/Dwapi.Exchange/appsettings.json
+++ b/src/Dwapi.Exchange/appsettings.json
@@ -6,5 +6,13 @@
     "DatabaseType": 1,
     "Connection": "Data Source=livedev.local;Initial Catalog=Data Request Palantir;Persist Security Info=True;User ID=sa;Password=maun;Pooling=True;MultipleActiveResultSets=True"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "Certificates": {
+      "Default": {
+        "Path": "kenyahmis.pfx",
+        "Password": "c0nstella"
+      }
+    }
+  }
 }
