--- a/src/Dwapi.Exchange/Dwapi.Exchange.csproj
+++ b/src/Dwapi.Exchange/Dwapi.Exchange.csproj
@@ -13,7 +13,7 @@
         <PackageReference Include="FluentValidation" Version="9.2.0" />
         <PackageReference Include="MediatR" Version="8.1.0" />
         <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Version="3.1.6" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.6" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.8">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
