--- a/src/Dwapi.Exchange/appsettings.Development.json
+++ b/src/Dwapi.Exchange/appsettings.Development.json
@@ -5,5 +5,6 @@
   "ExtractDataSource": {
     "DatabaseType": 1,
     "Connection": "Data Source=livedev.local;Initial Catalog=Data Request Palantir;Persist Security Info=True;User ID=sa;Password=maun;Pooling=True;MultipleActiveResultSets=True"
-  }
+  },
+  "Authority": "https://localhost:8443"
 }
