--- a/src/Dwapi.Exchange.SharedKernel.Infrastructure/Dwapi.Exchange.SharedKernel.Infrastructure.csproj
+++ b/src/Dwapi.Exchange.SharedKernel.Infrastructure/Dwapi.Exchange.SharedKernel.Infrastructure.csproj
@@ -11,10 +11,12 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
     <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Slapper.AutoMapper" Version="2.0.1" />
     <PackageReference Include="Z.Dapper.Plus" Version="3.0.18" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Dwapi.Exchange.Contracts\Dwapi.Exchange.Contracts.csproj" />
     <ProjectReference Include="..\Dwapi.Exchange.SharedKernel\Dwapi.Exchange.SharedKernel.csproj" />
   </ItemGroup>
 
