--- a/src/Dwapi.Exchange/appsettings.Development.json
+++ b/src/Dwapi.Exchange/appsettings.Development.json
@@ -6,5 +6,6 @@
     "DatabaseType": 1,
     "Connection": "Data Source=livedev.local\\koske17;Initial Catalog=Data Request Palantir;Persist Security Info=True;User ID=sa;Password=maun;Pooling=True;MultipleActiveResultSets=True"
   },
-  "Authority": "https://localhost:8443"
+  "Authority": "https://localhost:8443",
+  "ReadMode": 1
 }
