--- a/src/Dwapi.Exchange/appsettings.Development.json
+++ b/src/Dwapi.Exchange/appsettings.Development.json
@@ -4,8 +4,8 @@
   },
   "ExtractDataSource": {
     "DatabaseType": 1,
-    "Connection": "Data Source=livedev.local\\koske17;Initial Catalog=Data Request Palantir;Persist Security Info=True;User ID=sa;Password=maun;Pooling=True;MultipleActiveResultSets=True"
+    "Connection": "Data Source=livedev.local\\koske17;Initial Catalog=dwapiCT;Persist Security Info=True;User ID=sa;Password=maun;Pooling=True;MultipleActiveResultSets=True"
   },
   "Authority": "https://localhost:8443",
-  "ReadMode": 1
+  "ReadMode": 0
 }
