--- a/src/Dwapi.Exchange/Dwapi.Exchange.csproj
+++ b/src/Dwapi.Exchange/Dwapi.Exchange.csproj
@@ -26,6 +26,7 @@
         <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
         <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
+        <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="5.8.0" />
         <PackageReference Include="Serilog.Sinks.Seq" Version="4.0.0" />
         <PackageReference Include="Z.Dapper.Plus" Version="3.0.18" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
