--- a/src/Dwapi.Exchange/appsettings.Development.json
+++ b/src/Dwapi.Exchange/appsettings.Development.json
@@ -1,11 +1,11 @@
 {
   "ConnectionStrings": {
-    "LiveConnection": "Data Source=.;Initial Catalog=DwapiExchangeDev;Persist Security Info=True;User ID=sa;Password=root123!@#;Pooling=True;MultipleActiveResultSets=True"
+    "LiveConnection": "Data Source=livedev.local\\koske17;Initial Catalog=DwapiExchangeDev;Persist Security Info=True;User ID=sa;Password=maun;Pooling=True;MultipleActiveResultSets=True"
   },
   "ExtractDataSource": {
     "DatabaseType": 1,
-    "Connection": "Data Source=.;Initial Catalog=Data Request Palantir;Persist Security Info=True;User ID=sa;Password=root123!@#;Pooling=True;MultipleActiveResultSets=True"
+    "Connection": "Data Source=livedev.local\\koske17;Initial Catalog=Data Request Palantir;Persist Security Info=True;User ID=sa;Password=maun;Pooling=True;MultipleActiveResultSets=True"
   },
-  "Authority": "https://auth2.kenyahmis.org:8443",
-  "ReadMode": 0
+  "Authority": "https://localhost:8443",
+  "ReadMode": 1
 }
